<resources>
    <string name="app_name" translatable="false">Amit</string>
    <string name="username">name</string>
    <string name="password">Password</string>
    <string name="mail">Email</string>
    <string name="Signup_btn">Sign Up</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="go_login">GO Login</string>
    <string name="title_activity_login" translatable="false">login</string>
    <string name="login_btn">Login</string>
    <string name="go_Signup">Go SignUp</string>
    <string name="Add_to_Cart">Add to Cart</string>
    <string name="Clear_Cart">Clear Cart</string>
    <string name="Checkout">Go to Checkout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>