<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/mail_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:textSize="@dimen/_20sdp"
        android:background="@drawable/et_style"
        android:hint="@string/mail"
        android:paddingLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/black"
    app:hintEnabled="false"
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/password_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:textSize="@dimen/_20sdp"
        android:textAlignment="viewStart"
        android:paddingLeft="@dimen/_16sdp"
        android:background="@drawable/et_style"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
         />
</com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:text="@string/login_btn"
        android:textSize="@dimen/_15sdp"
        android:background="@drawable/background_btn"
        android:layout_marginVertical="@dimen/_25sdp"
        />

    <TextView
        android:id="@+id/go_Signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_Signup"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_2sdp"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        />

</LinearLayout>